compose: Fix compose recipient channel privacy icon vertical alignment.

--- a/web/styles/compose.css
+++ b/web/styles/compose.css
@@ -1753,7 +1753,7 @@ textarea.new_message_textarea {
             grid-area: privacy-icon;
             place-self: center;
             font-size: 0.95em; /* 19px at 20px/1em */
-            margin-top: -0.0579em; /* Eyeball work; 1.1px at 19px/1em */
+            margin-top: 0.0579em; /* Eyeball work; 1.1px at 19px/1em */
             color: var(--privacy-icon-color-original);
             /* Eliminate inherited component styles. */
             position: static;
